// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with four pages 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  min-width: 2rem;
  height: 2rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  line-height: 1.8125rem;
  border: 0.0625rem solid;
  margin: 0 0.125rem 0 0.125rem;
  cursor: pointer;
}

.c5 {
  cursor: default;
}

.c3 {
  width: 3.75rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  margin: 0 0.375rem 0 0;
}

.c6 {
  margin: 0 0 0 0.375rem;
}

.c1 {
  box-sizing: border-box;
}

<div
  className="c0 c1"
>
  <button
    className="c2 c3 c4"
    onClick={[Function]}
  >
    <svg
      height="14px"
      width="8px"
    >
      <path
        d="M7.533 6.538L8 7l-.467.462L.933 14 0 13.075l6.6-6.537v.924L0 .925.933 0z"
        fill="#999999"
        transform="rotate(180 4 7)"
      />
    </svg>
  </button>
  <div>
    <button
      className="c5 c4"
    >
      1
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      3
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      4
    </button>
  </div>
  <button
    className="c6 c3 c4"
    onClick={[Function]}
  >
    <svg
      height="14px"
      width="8px"
    >
      <path
        d="M7.533 6.538L8 7l-.467.462L.933 14 0 13.075l6.6-6.537v.924L0 .925.933 0z"
        fill="#999999"
        transform="rotate(0 0 0)"
      />
    </svg>
  </button>
</div>
`;

exports[`should render with nine pages 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  min-width: 2rem;
  height: 2rem;
  font-size: 0.875rem;
  border-radius: 0.1875rem;
  line-height: 1.8125rem;
  border: 0.0625rem solid;
  margin: 0 0.125rem 0 0.125rem;
  cursor: pointer;
}

.c5 {
  border: none;
  background-color: transparent;
  cursor: default;
}

.c6 {
  cursor: default;
}

.c3 {
  width: 3.75rem;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  margin: 0 0.375rem 0 0;
}

.c7 {
  margin: 0 0 0 0.375rem;
}

.c1 {
  box-sizing: border-box;
}

<div
  className="c0 c1"
>
  <button
    className="c2 c3 c4"
    onClick={[Function]}
  >
    <svg
      height="14px"
      width="8px"
    >
      <path
        d="M7.533 6.538L8 7l-.467.462L.933 14 0 13.075l6.6-6.537v.924L0 .925.933 0z"
        fill="#999999"
        transform="rotate(180 4 7)"
      />
    </svg>
  </button>
  <div>
    <button
      className="c4"
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="c5 c4"
    >
      …
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      4
    </button>
    <button
      className="c6 c4"
    >
      5
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      6
    </button>
    <button
      className="c5 c4"
    >
      …
    </button>
    <button
      className="c4"
      onClick={[Function]}
    >
      9
    </button>
  </div>
  <button
    className="c7 c3 c4"
    onClick={[Function]}
  >
    <svg
      height="14px"
      width="8px"
    >
      <path
        d="M7.533 6.538L8 7l-.467.462L.933 14 0 13.075l6.6-6.537v.924L0 .925.933 0z"
        fill="#999999"
        transform="rotate(0 0 0)"
      />
    </svg>
  </button>
</div>
`;
